Solve GH-19, Correct Readme

--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -47,6 +47,9 @@
 #VEH .col-7{
   background-image: url(http://cimb.com.mx/img/proyectos/main/fondoplataformaInteligente.jpg);
 }
+#AVA .col-7{
+  background-image: url(../img/proyectos/main/avatar.PNG);
+}
 
 
 .title {
