--- a/css/divulgacion.css
+++ b/css/divulgacion.css
@@ -47,6 +47,15 @@ height: 70px !important;
 #Admas8 .col-7{
   background-color: #122c47 !important
 }
+#Admas99 .col-7{
+  background-color: #122c47 !important
+}
+#Admas98 .col-7{
+  background-color: #122c47 !important
+}
+#Admas97 .col-7{
+  background-color: #122c47 !important
+}
 
 
 #DomEm1 .col-7{
@@ -64,7 +73,17 @@ height: 70px !important;
 #DomEm5 .col-7{
   background-color: #122c47 !important
 }
+#DomEm99 .col-7{
+  background-color: #122c47 !important
+}
+#DomEm98 .col-7{
+  background-color: #122c47 !important
 
+}
+#DomEm97 .col-7{
+  background-color: #122c47 !important
+
+}
 #ExoDUX1 .col-7{
   background-color: #122c47 !important
 }
@@ -72,6 +91,16 @@ height: 70px !important;
   background-color: #122c47 !important
 }
 #ExoDUX3 .col-7{
+  background-color: #122c47 !important
+}
+
+#ExoDUX99 .col-7{
+  background-color: #122c47 !important
+}
+#ExoDUX98 .col-7{
+  background-color: #122c47 !important
+}
+#ExoDUX97 .col-7{
   background-color: #122c47 !important
 }
 
